# bonc

./: .clang-format  README.md  TODO.md  meson.build
docs/: language.md
include/: args.h  ast.h  error.h  helper.h  ir_gen.h  lexer.h  parser.h  platforms.h  semantics.h  spill.h  ssa.h  sym_reg.h  symtable.h  type.h
internals/: ast.md  ssa.md
scripts/: diag_table.txt  gen_diags.py
src/: args.c  ast.c  bcc2.c  bonc.c  comp.c  error.c  helper.c  ir_gen.c  lexer.c  parser.c  sem_names.c  sem_returns.c  sem_types.c  spill.c  ssa.c  symtable.c
